# lyrics

./: Cargo.toml  README.md
src/: daemon.rs  font.rs  genius.rs  lyrics_api.rs  lyrics_ovh.rs  main.rs  mpris.rs  netease.rs  theme.rs
